--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 		<!-- Header -->
 			<header id="header">
-					<a href="index.html" class="logo">Garder une vie sociale et scolaire pour un enfant malade, c'est possible !</a>
-					<a href="images/takeoff.png"></a>
+					Garder une vie sociale et scolaire pour un enfant malade, c'est possible !
 			</header>
 
 		<!-- Banner -->
 			<section id="banner">
-
+					<a href="images/takeoff.png"></a>
 			</section>
 
 		<!-- One -->
@@ -120,12 +119,16 @@
 			<section id="footer">
 				<div class="inner">
 					<header>
+						<div class="liste">
 						<h2>D'autres associations</h2>
+						<div class="assoce" >
 						<ul>
 							<li><a href="https://www.sos-villages-enfants.be/parrainage-offrez-une-famille-a-chaque-enfant">SOS village d'enfant</a></li>
 							<li><a href="https://www.arc-en-ciel.be/">arc-en-ciel , ASBL</a></li>
 							<li><a href="http://www.kidscarehuderf.be/">Les amis de l'hopital universtiaire des enfants , ASBL</a></li>
 						</ul>
+						</div>
+						</div>
 					</header>
 	
 
